// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > builds all packages from root 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app, kind=implementation]",
  "    build.parse_file[module=App, package=@rewatch-test/app, kind=interface]",
  "    build.parse_file[module=Library, package=@rewatch-test/library, kind=implementation]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture, kind=implementation]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library, kind=implementation]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`build > builds from a package subdirectory 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=2]",
  "    build.parse_file[module=Library, package=@rewatch-test/library, kind=implementation]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library, kind=implementation]",
  "  full_build[module_count=2, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`build > does not produce new artifacts on a second build 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=4]",
  "    build.parse_file[module=App, package=@rewatch-test/app, kind=implementation]",
  "    build.parse_file[module=App, package=@rewatch-test/app, kind=interface]",
  "    build.parse_file[module=Library, package=@rewatch-test/library, kind=implementation]",
  "    build.parse_file[module=Root, package=rewatch-test-fixture, kind=implementation]",
  "    build.parse_file[module=Unrelated, package=@rewatch-test/library, kind=implementation]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=2]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "        build.compile_file[module=Unrelated, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=App, package=@rewatch-test/app, suffix=.mjs, module_system=esmodule]",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Root, package=rewatch-test-fixture, suffix=.mjs, module_system=esmodule]",
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=0]",
  "  full_build[module_count=4, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=0]",
]
`;

exports[`build > only compiles files matching the filter regex 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/app]",
  "      build.load_package_sources[package=@rewatch-test/library]",
  "      build.load_package_sources[package=rewatch-test-fixture]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  build.parse[dirty_modules=1]",
  "    build.parse_file[module=Library, package=@rewatch-test/library, kind=implementation]",
  "  full_build[module_count=1, output=standard]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=Library, package=@rewatch-test/library, suffix=.mjs, module_system=esmodule]",
]
`;
